--- a/Dasmoto's Art and Crafts/resources/index.css
+++ b/Dasmoto's Art and Crafts/resources/index.css
@@ -1,37 +1,34 @@
-body{
-  font-family:Helvetica;
-}
-h1{
+body {
   font-family: Helvetica;
-  font-size:100px;
+}
+
+h1 {
+  font-size: 100px;
   font-weight: bold;
   text-align: center;
-  color:khaki;
+  color: khaki;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/pattern.jpeg);
 }
-.brushes{
+
+h2 {
+  font-size: 32px;
+  font-weight: bold;
+  color: white;
+}
+
+#brushes h2 {
   background-color: mediumspringgreen;
-  font-family:Helvetica;
-  font-size:32px;
-  font-weight: bold;
-  color:white;
 }
-.price{
-  font-family:Helvetica;
-  font-wieght:bold;
-  color:blue;
+
+#frames h2 {
+  background-color: lightcoral;
 }
-.frames{
-  background-color:lightcoral;
-  font-family:Helvetica;
-  font-size:32px;
-  font-weight: bold;
-  color:white;
+
+#paint h2 {
+  background-color: skyblue;
 }
-.paint{
-  background-color:skyblue;
-  font-family:Helvetica;
-  font-size:32px;
+
+.price {
   font-weight: bold;
-  color:white;
+  color: blue;
 }
